# my_poetry

./: Jenkinsfile  JenkinsfileTAG  LICENSE  README.md  pyproject.toml
src/my_project2/: __init__.py
