[project]
name = "my-project2"
version = "0.1.3"
description = "This is my own project 2"
authors = [
    {name = "Krzysztof Romanowski"}
]
license = {text = "BSD 3"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
